# DMPPIC

./: Allwclean  CMakeLists.txt  DPMFoam.C  README.md  log.linux64GccDPInt32Opt  tree.txt
DPMDyMFoam/MPPICDyMFoam/Make/: files  options
DPMDyMFoam/MPPICDyMFoam/Make/linux64GccDPInt32Opt/: MPPICDyMFoam.C.dep  options  variables
DPMDyMFoam/Make/: files  options
DPMDyMFoam/Make/linux64GccDPInt32Opt/: DPMDyMFoam.C.dep  options  variables
DPMTurbulenceModels/Make/: files
DPMTurbulenceModels/Make/linux64GccDPInt32Opt/: DPMTurbulenceModels.C.dep  options  variables
Include/: GlobalVariable.H
MPPICFoam/Make/: files  options
MPPICFoam/Make/linux64GccDPInt32Opt/: MPPICFoam.C.dep  options  variables
Make/: files  options
Make/linux64GccDPInt32Opt/: DPMFoam.C.dep  options  variables
TestCase/complex_boundary/: clean  extract_stick_particles.ipynb  generate_coordinates_particles.ipynb  mesh  mesh.blend  run
TestCase/complex_boundary/0/: U.medium  cellLevel  p  pointLevel
TestCase/complex_boundary/constant/: kinematicCloudPositions  kinematicCloudPositions_n1e3  kinematicCloudPositions_scaled  kinematicCloudProperties  kinematicCloudProperties2  kinematicCloudProperties4
TestCase/complex_boundary/constant/extendedFeatureEdgeMesh/: inlet1.extendedFeatureEdgeMesh  outlet1.extendedFeatureEdgeMesh  wall1.extendedFeatureEdgeMesh  wall2.extendedFeatureEdgeMesh
TestCase/complex_boundary/constant/polyMesh/: boundary  cellLevel  faces  level0Edge  neighbour  owner  pointLevel  pointZones  points  surfaceIndex
TestCase/complex_boundary/constant/polyMesh/sets/: wrongFaces
TestCase/complex_boundary/constant/triSurface/: inlet1.eMesh  inlet1.stl  outlet1.eMesh  outlet1.stl  wall1.eMesh  wall1.stl  wall2.eMesh  wall2.stl
TestCase/complex_boundary/system/: blockMeshDict  controlDict  snappyHexMeshDict  surfaceFeatureExtractDict
TestCase/freespace/: cir.ipynb  cir.npy  clean  run
TestCase/freespace/0/: U.medium
TestCase/freespace/constant/: kinematicCloudPositions_n1e4  kinematicCloudPositions_n1e5  kinematicCloudProperties  kinematicCloudProperties3
TestCase/freespace/constant/polyMesh/: boundary  faces  neighbour  owner  points
TestCase/freespace/system/: blockMeshDict  controlDict  snappyHexMeshDict
include/: createFields.H  globalVars.H
include/OpenFOAM/primitives/ints/label/: labelFwd.H
include/lagrangian/basic/lnInclude/: particleTemplates.C
src/: DMPPICFoam.C
testcase/Capillary.Dispersion/0/: U.medium
testcase/Capillary.Dispersion/constant/: kinematicCloudPositions  kinematicCloudProperties
testcase/Capillary.Dispersion/system/: blockMeshDict  controlDict  surfaceFeatureExtractDict
testcase/Capillary.FlowDominate/0/: U.medium
testcase/Capillary.FlowDominate/constant/: kinematicCloudProperties  transportProperties  turbulenceProperties.medium
testcase/Capillary.FlowDominate/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes
testcase/Capillary.MixRegime/0/: U.medium  p
testcase/Capillary.MixRegime/system/: controlDict  decomposeParDict
testcase/FreeSpace/0/: p
testcase/FreeSpace/constant/: kinematicCloudProperties
testcase/FreeSpace/system/: controlDict
